--- a/src/components/PreviewPane/PreviewPane.module.css
+++ b/src/components/PreviewPane/PreviewPane.module.css
@@ -12,6 +12,7 @@
 .iframe {
   width: 100%;
   height: 100%;
+  min-height: 400px;
   border: none;
   display: block;
 }
